# vcm_prototype

./: ARCHITECTURE.md  CMakeLists.txt  README.md
docs/dev/: 00_REPOSITORY_OVERVIEW.md  01_ARCHITECTURE.md  02_EXECUTION_FLOW.md  03_FILE_INDEX.md  04_DATA_STRUCTURES.md  05_MPI_COMMUNICATION.md  06_FORWARD_PASS.md  07_BACKWARD_PASS.md
graphs/: toy.graph
include/: assertions.h  checkpoint.h  compute.h  config.h  dataset.h  distributed_optimizer.h  frontier.h  gnn_layer.h  gnn_model.h  gradient_exchange.h  graph.h  inbox.h  loader.h  local_backward.h  message.h  mpi_exchange.h  outbox.h  partition.h  runtime.h  statistics.h  superstep.h  timing.h  trainer.h  vertex_map.h  vertex_state.h
src/: assertions.cpp  checkpoint.cpp  compute.cpp  dataset.cpp  distributed_optimizer.cpp  frontier.cpp  gnn_layer.cpp  gnn_model.cpp  gradient_exchange.cpp  inbox.cpp  loader.cpp  local_backward.cpp  main.cpp  mpi_exchange.cpp  outbox.cpp  partition.cpp  runtime.cpp  superstep.cpp  trainer.cpp  vertex_map.cpp
